--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "ext-gd": "*",
         "php": "7.*",
 
-        "WordPress/WordPress": "*",
+        "WordPress/WordPress": "4.9.8",
 
         "automattic/batcache": "dev-master",
         "wpackagist-plugin/redis-cache": "~1",
@@ -37,10 +37,10 @@
             "type": "package",
             "package": {
                 "name": "WordPress/WordPress",
-                "version": "4.9.7",
+                "version": "4.9.8",
                 "dist": {
                     "type": "zip",
-                    "url": "https://github.com/WordPress/WordPress/archive/4.9.7.zip"
+                    "url": "https://github.com/WordPress/WordPress/archive/4.9.8.zip"
                 }
             }
         },
